--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -9,7 +9,7 @@ table{border-collapse:collapse;border-spacing:0;text-align:left}
 caption,th{text-align:inherit}
 ul,ol,menu{list-style:none}
 fieldset,img{border:0}
-img,object,input,textarea,button,select{vertical-align:middle}
+/* img,object,input,textarea,button,select{vertical-align:middle} */
 article,aside,footer,header,section,nav,figure,figcaption,hgroup,details,menu{display:block}
 audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
 blockquote:before,blockquote:after,q:before,q:after{content:"\0020"}
